fix overflow text

--- a/src/pages/styles/about.css
+++ b/src/pages/styles/about.css
@@ -6,7 +6,8 @@
     gap: 30px;
 }
 
-.ts-card, .faq-card {
+.ts-card,
+.faq-card {
     width: 90%;
     height: fit-content;
     display: flex;
@@ -19,7 +20,8 @@
     height: fit-content;
     display: flex;
     flex-direction: column;
-    color: white;;
+    color: white;
+    ;
 }
 
 .faq-button {
@@ -49,7 +51,8 @@
     padding: 6px;
 }
 
-.ts-card-header, .faq-card-header {
+.ts-card-header,
+.faq-card-header {
     border-image: url(/src/assets/templates/ore-ui/cards/card-header.png) 4 4 2 4 fill / 4px 4px 2px 4px;
     width: 100%;
     height: 52px;
@@ -155,6 +158,10 @@
 .profile-card-footer p {
     width: 100%;
     flex-wrap: wrap;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    white-space: pre-line;
+    hyphens: auto;
 }
 
 @media (max-width: 628px) {
